# mli-blueprint

./: .gitignore  Developing.md  README.md  pyproject.toml
analysis/: constants.py
analysis/lib/: attribute_encoding.py  raster.py
analysis/lib/stats/: blueprint.py  nlcd.py  protected_areas.py  rasterized_geometry.py  summary_units.py  urban.py
analysis/post/: create_state_reports.py
analysis/prep/: README.md  package_unit_data.py  prepare_blueprint.py  prepare_boundaries.py  prepare_nlcd.py  prepare_protected_areas.py  prepare_summary_units.py  prepare_urban.py  tabulate_summary_units.py
analysis/prep/tiles/: README.md  create_raster_tiles.sh  create_vector_tiles.py  encode_pixel_layers.py
api/: README.md  api.py  custom_report.py  settings.py  summary_unit_report.py
api/report/: __init__.py
api/report/map/: __init__.py  aoi.py  locator.py  summary_unit.py
api/report/templates/: report.css  report.html
api/report/templates/blocks/: about.html  blueprint.html  (+9 more)
api/stats/: custom_area.py  summary_units.py
constants/: blueprint.json  indicator_groups.json  indicators.json  pixel_layers_0.json  pixel_layers_1.json  pixel_layers_2.json  pixel_layers_3.json  pixel_layers_4.json  subregions.json
source_data/blueprint/: README.md
source_data/boundaries/: README.md
source_data/summary_units/: README.md
tests/: test_maps.py  test_report.py  test_report_api.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts  env.ts
ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
(+58 files in other folders)
